<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <!--
        TecniApp ICE © 2025 Arasoft Solutions
        Todos los derechos reservados.
        Desarrollado para el Instituto Costarricense de Electricidad (ICE).
    -->

    <!-- Fragmento de inicio (Home) -->
    <fragment
        android:id="@+id/nav_home"
        android:name="com.Arasoftsolutions.tecniapp_ice.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <!-- Fragmento de medidor -->
    <fragment
        android:id="@+id/nav_medidor"
        android:name="com.Arasoftsolutions.tecniapp_ice.ui.medidor.MedidorFragment"
        android:label="@string/menu_medidor"
        tools:layout="@layout/fragment_medidor" />

    <!-- Fragmento de localización -->
    <fragment
        android:id="@+id/nav_localizacion"
        android:name="com.Arasoftsolutions.tecniapp_ice.ui.localizacion.LocalizacionFragment"
        android:label="@string/menu_localizacion"
        tools:layout="@layout/fragment_localizacion" />

    <!-- Fragmento de averías -->
    <fragment
        android:id="@+id/nav_averias"
        android:name="com.Arasoftsolutions.tecniapp_ice.ui.averias.AveriasFragment"
        android:label="@string/menu_averias"
        tools:layout="@layout/fragment_averias" />

    <!-- Fragmento de luminarias -->
    <fragment
        android:id="@+id/nav_luminarias"
        android:name="com.Arasoftsolutions.tecniapp_ice.ui.luminarias.LuminariasFragment"
        android:label="@string/menu_luminarias"
        tools:layout="@layout/fragment_luminarias" />

    <!-- Fragmento de inventario -->
    <fragment
        android:id="@+id/nav_inventario"
        android:name="com.Arasoftsolutions.tecniapp_ice.ui.inventario.InventarioFragment"
        android:label="@string/menu_inventario"
        tools:layout="@layout/fragment_inventario" />

    <!-- Fragmento Mi Vehículo -->
    <fragment
        android:id="@+id/nav_mi_vehiculo"
        android:name="com.Arasoftsolutions.tecniapp_ice.ui.vehiculo.MiVehiculoFragment"
        android:label="@string/menu_mi_vehiculo"
        tools:layout="@layout/fragment_mi_vehiculo" />

    <!-- Fragmento de reportes -->
    <fragment
        android:id="@+id/nav_reportes"
        android:name="com.Arasoftsolutions.tecniapp_ice.ui.reportes.ReportesFragment"
        android:label="@string/menu_reportes"
        tools:layout="@layout/fragment_reportes" />

    <fragment
        android:id="@+id/nav_planillas"
        android:name="com.Arasoftsolutions.tecniapp_ice.ui.planillas.PlanillasHomeFragment"
        android:label="@string/menu_planillas"
        tools:layout="@layout/fragment_planillas_home" />

    <!-- Fragmento de administración -->
    <fragment
        android:id="@+id/nav_admin"
        android:name="com.Arasoftsolutions.tecniapp_ice.ui.admin.AdminManagementFragment"
        android:label="@string/menu_admin"
        tools:layout="@layout/fragment_admin_management" />

    <!-- Fragmento de programación -->
    <fragment
        android:id="@+id/nav_programacion"
        android:name="com.Arasoftsolutions.tecniapp_ice.ui.programacion.ProgramacionFragment"
        android:label="@string/menu_programacion"
        tools:layout="@layout/fragment_programacion" />

     <!-- Fragmento de Account -->
    <fragment
        android:id="@+id/nav_account"
        android:name="com.Arasoftsolutions.tecniapp_ice.User.UserFragment"
        android:label="@string/action_accounts"
        tools:layout="@layout/fragment_user" />

    <!-- Fragmento de ajustes -->
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.Arasoftsolutions.tecniapp_ice.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <!-- Fragmento de ayuda -->
    <fragment
        android:id="@+id/nav_help"
        android:name="com.Arasoftsolutions.tecniapp_ice.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />

    <!-- Fragmento de políticas -->
    <fragment
        android:id="@+id/nav_privacy"
        android:name="com.Arasoftsolutions.tecniapp_ice.ui.policies.PoliciesFragment"
        android:label="@string/menu_privacy"
        tools:layout="@layout/fragment_policies" />

</navigation>
